--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   text-align: center;
   background-color: #ccf381;
   color: #4831d4;
+  z-index: -10;
 }
 
 .trash {
@@ -38,4 +39,43 @@ button {
 li {
   justify-content: space-between;
   text-align: justify;
+}
+
+body.active-modal {
+  overflow-y: hidden;
+}
+
+.modal,
+.modal-background {
+  z-index: 10;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+}
+
+.modal-background {
+  background: rgba(49, 49, 49, 0.8);
+}
+.modal-content {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  line-height: 1.4;
+  background: #ccf381;
+  padding: 14px 28px;
+  border-radius: 3px;
+  max-width: 600px;
+  min-width: 300px;
+}
+
+.close-modal {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 7px;
 }
