--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,12 @@ body.active-modal {
   right: 10px;
   padding: 5px 7px;
 }
+
+table {
+  width: 100%;
+}
+
+tbody tr:nth-child(2n + 1) {
+  color: #ccf381;
+  background-color: rgb(72, 49, 212, 0.4);
+}
